[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/GUI/level_selection_button.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.501961, 0.501961, 0.501961, 1 )

[node name="LevelSelectionButton" type="Button"]
margin_right = 619.0
margin_bottom = 375.0
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 65.0
margin_top = 40.0
margin_right = -65.0
margin_bottom = -40.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="HBoxContainer"]
self_modulate = Color( 0.0901961, 0.0901961, 0.0901961, 1 )
margin_left = 242.0
margin_top = 140.0
margin_right = 242.0
margin_bottom = 154.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="NumberLabel" type="Label" parent="HBoxContainer"]
self_modulate = Color( 0.0901961, 0.0901961, 0.0901961, 1 )
margin_left = 246.0
margin_top = 140.0
margin_right = 246.0
margin_bottom = 154.0
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[connection signal="pressed" from="." to="." method="_on_LevelSelectionButton_pressed"]
